z-index fixes

--- a/resources/views/v2/components/HeaderLight/HeaderLight.css
+++ b/resources/views/v2/components/HeaderLight/HeaderLight.css
@@ -16,6 +16,7 @@
         width: calc($spacer * 100);
         height: calc($spacer * 60);
         opacity: $opacity-xs;
+        pointer-events: none;
     }
 
     .HeaderLight__content {
@@ -23,6 +24,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 10;
     }
 
     .HeaderLight__title {
@@ -30,4 +32,8 @@
         font: $font-heading-xxl ?if $tablet;
         font: $font-heading-xl ?if $mobile;
         color: $gray-darkest;
+    }
+
+    .HeaderLight__navbar {
+        z-index: 10;
     }
